<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/hi"
                android:fontFamily="@font/roboto"
                android:textColor="@color/darkGray"
                android:textSize="25dp"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wel_msg"
                android:fontFamily="@font/roboto"
                android:textSize="38dp"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/house_image_250" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_add_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:drawableTop="@drawable/ico_add_32dp"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_ripple"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/segoeui"
                    android:text="@string/btn_add_item"/>

                <Button
                    android:id="@+id/btn_guests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:gravity="center"
                    app:iconSize="20dp"
                    android:drawableTop="@drawable/ico_guest_32dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_ripple"
                    android:textColor="@android:color/white"
                    android:text="@string/guest_title"
                    android:fontFamily="@font/segoeui"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:drawableTop="@drawable/ico_summary_32dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_ripple"
                android:textColor="@android:color/white"
                android:text="@string/btn_summary"
                android:fontFamily="@font/segoeui"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="5dp"
        android:text="@string/app_version"
        android:textColor="@color/darkGray"
        android:gravity="center"/>
    <Button
        android:id="@+id/btn_lang"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="20dp"
        android:background="@drawable/eng"
        android:layout_gravity="right|bottom"
        />


</FrameLayout>