<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBG">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeui"
        android:text="@string/add_an_item_string"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="193dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_add_item_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:cardElevation="6dp"
        app:cardCornerRadius="30dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <Spinner
                android:id="@+id/sp_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Item Type"
                android:background="@drawable/bg_spinner_color"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="5dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto"
                android:backgroundTint="@color/black"
                android:hint="@string/item_name"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@+id/sp_type"
                tools:layout_editor_absoluteX="-18dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_item_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_margin="10dp"
                android:layout_marginTop="44dp"
                android:backgroundTint="@color/black"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@+id/et_item_name"
                tools:layout_editor_absoluteX="5dp" />

            <Button
                android:id="@+id/btn_submit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_ripple"
                android:fontFamily="@font/segoeui"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:text="@string/alert_submit"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_item_amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>